fix: move toast to bottom & add overflow-x to hidden (#74)

--- a/assets/sass/toast/toast.scss
+++ b/assets/sass/toast/toast.scss
@@ -1,6 +1,6 @@
 .toast-container {
   position: absolute;
-  top: 0;
+  bottom: 0;
   right: 15px;
   display: flex;
   align-items: center;
